[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = { version = "1.0.68", features=["backtrace"] }                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.20", features = ["derive"] }
thiserror = "1.0.38"                             # error handling
flate2 = "1.0.34"
sha1 = "0.10.6"
hex = "0.4"
